[project]
name = "phasmix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pavadol Yamsiri", email = "pavyamsiri@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "agama",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "optype[numpy]>=0.17.0",
    "scipy>=1.17.1",
    "scipy-stubs>=1.17.1.4",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
agama = { git = "https://github.com/pavyamsiri/agama", rev = "uv" }
